src/ajeffrey/teaching/size/event/SizeRequestParser.java
/* Generated By:JavaCC: Do not edit this line. SizeRequestParser.java */
package ajeffrey.teaching.size.event;

import java.io.IOException;
import java.io.InputStream;

/**
 * A parser for SIZE requests.
 * @author Alan Jeffrey
 * @version 1.0.1
 */

// Note that JavaCC requires the parser to be a public class,
// so we can't use the "only public interfaces, no public classes"
// rule here.

public class SizeRequestParser implements SizeRequestMultiplexer, SizeRequestParserConstants {

    /**
     * A factory for building parsers.
     */
    public static final SizeRequestParserFactory factory = new SizeRequestParserFactoryImpl ();

    protected final SizeRequestMultiplexer multiplexer =
        SizeRequestMultiplexer.factory.build ();

    public void addSizeRequestHandler (final SizeRequestHandler handler) {
        multiplexer.addSizeRequestHandler (handler);
    }

    public void removeSizeRequestHandler (final SizeRequestHandler handler) {
        multiplexer.removeSizeRequestHandler (handler);
    }

    public void handleSizeRequest (final String fileName) throws IOException {
        multiplexer.handleSizeRequest (fileName);
    }

    public void handleQuitRequest () throws IOException {
        multiplexer.handleQuitRequest ();
    }

  final public void parseSizeRequest() throws ParseException, IOException {
    quitRequest();
  }

  final public void quitRequest() throws ParseException, IOException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUIT:
      jj_consume_token(QUIT);
      jj_consume_token(CRLF);
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    handleQuitRequest ();
  }

  public SizeRequestParserTokenManager token_source;
  ASCII_CharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[1];
  final private int[] jj_la1_0 = {0x3,};

  public SizeRequestParser(java.io.InputStream stream) {
    jj_input_stream = new ASCII_CharStream(stream, 1, 1);
    token_source = new SizeRequestParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.InputStream stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  public SizeRequestParser(java.io.Reader stream) {
    jj_input_stream = new ASCII_CharStream(stream, 1, 1);
    token_source = new SizeRequestParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  public SizeRequestParser(SizeRequestParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  public void ReInit(SizeRequestParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.Vector jj_expentries = new java.util.Vector();
  private int[] jj_expentry;
  private int jj_kind = -1;

  final public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[3];
    for (int i = 0; i < 3; i++) {
      la1tokens[i] = false;
    }
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 1; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 3; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  final public void enable_tracing() {
  }

  final public void disable_tracing() {
  }

}

class SizeRequestParserFactoryImpl implements SizeRequestParserFactory {

    public SizeRequestParser build (final InputStream in) {
        return new SizeRequestParser (in);
    }

}
